# project_3

./: pyproject.toml  requirements.txt
test_operations/: .gitignore  conftest.py  test_operations.py
utils/: __init__.py  main.py  utils.py
