[tool.poetry]
name = "project-3"
version = "0.1.0"
description = ""
authors = ["ilyas <jubiev2017@gmail.com>"]
readme = "README.md"
packages = [{include = "project_3"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
